0715制作游戏的原则，场景要独立，下级场景不能影响上级，受上级控制

--- a/Godot实用代码模块/常用代码.md
+++ b/Godot实用代码模块/常用代码.md
@@ -20,3 +20,6 @@ set_linear_velocity(Vector2(speed, 0))
 set_linear_damp(0)
 set_gravity_scale(Common.birdGravityScale())
 ```
+float randf_range(from: float, to: float)
+
+返回 from 和 to（包含）之间的随机浮点值。
