--- a/Godot实用代码模块/常用模块说明.md
+++ b/Godot实用代码模块/常用模块说明.md
@@ -1,10 +1,86 @@
 ## 按键绑定
 游戏中的操作按键需要在设置的位置单独绑定，不然是不起作用的
-## AnimatedSprite2D
+## AnimatedSprite2D (动画精灵)
+- 存放连续动画帧，可以作为角色的对象。有碰撞
 ```
-继承：Node2D<CanvasItem<Node<Object
+继承：Node2D < CanvasItem < Node < Object
 
 AnimatedSprite2D 与 Sprite2D 节点类似，但是包含多张纹理，可用作动画帧。
 动画使用 SpriteFrames 资源创建，可以导入图像文件（或包含此类文件的文件夹）为该精灵提供动画帧。
 可以在编辑器的“动画帧”底部面板中配置 SpriteFrames 资源。
+```
+## CollisionShape2D (碰撞形状)
+- 透明不可见，设置碰撞形状，提供碰撞检测
+```
+继承：Node2D < CanvasItem < Node < Object
+
+向 CollisionObject2D 父级提供 Shape2D 并允许对其进行编辑的节点。
+这可以为 Area2D 提供检测形状或将 PhysicsBody2D 转变为实体对象。
+```
+## Sprite2D
+- 可见的贴图，无碰撞
+```
+继承：Node2D < CanvasItem < Node < Object
+
+通用精灵节点。显示 2D 纹理的节点。
+显示的纹理可以是较大图集纹理中的某个区域，也可以是精灵表动画中的某一帧。
+```
+## StaticBody2D (静态物体)
+- 有碰撞，但不可移动。例如空气墙
+```
+继承：PhysicsBody2D < CollisionObject2D < Node2D < CanvasItem < Node < Object
+派生：AnimatableBody2D
+
+静态 2D 物理体。 
+它不能通过外力或接触来移动，但可以通过其他方式手动移动，例如代码。
+当 StaticBody2D 移动时，它会被传送到新位置，而不会影响其路径中的其他物理体。 
+如果不需要，请改用 AnimatableBody2D。
+StaticBody2D 对于完全静态的物体（如地板和墙壁）以及移动表面（如传送带和圆形旋转平台）非常有用。
+```
+## Area2D (2D空间)
+- 不可见无实体的空间范围检测
+```
+继承：CollisionObject2D <  Node2D <  CanvasItem <  Node <  Object
+
+2D 空间的一个区块，用于检测其他 CollisionObject2D 进入或退出它。
+Area2D 是 2D 空间中的一个区域，由一个或多个 CollisionShape2D 或 CollisionPolygon2D 子节点定义，
+能够检测到其他 CollisionObject2D 进入或退出该区域，
+同时也会记录哪些碰撞对象尚未退出（即哪些对象与其存在重叠）。
+这个节点也可以在局部修改或覆盖物理参数（重力、阻尼），将音频引导至自定义音频总线。
+```
+
+## VisibleOnScreenNotifier2D (可见通知者？)
+- 用于当物体离开屏幕区域后触发函数，以便移除元素，以此节省资源
+```
+继承： Node2D <  CanvasItem <  Node <  Object
+派生： VisibleOnScreenEnabler2D
+
+检测节点范围何时在屏幕上可见。
+它还会在其边界矩形进入或退出屏幕或视口时发出通知。
+如果希望节点在退出屏幕时自动禁用，请改用 VisibleOnScreenEnabler2D。
+注意：VisibleOnScreenNotifier2D 使用渲染剔除代码来确定它是否在屏幕上可见，
+这也意味着它的 CanvasItem.visible 必须是 true 才能正常工作。
+```
+## RigidBody2D (二维刚体)
+- 不确定？有碰撞、可见的物体，默认有重力等的影响。但是又不能直接控制？
+```
+继承：  PhysicsBody2D <  CollisionObject2D <  Node2D <  CanvasItem <  Node <  Object
+派生：  PhysicalBone2D ,  "script/Bird.gd"
+
+通过物理模拟移动的 2D 物理体。
+
+RigidBody2D 实现完整的 2D 物理。 
+它不能直接控制，而是必须对其施加力（重力、脉冲等），物理模拟将计算由此产生的运动、旋转、对碰撞的反应，并影响其路径上的其他物理体。
+
+可以通过 lock_rotation、freeze 和 freeze_mode 来调整主体的行为。 
+通过更改对象的各种属性（例如质量），您可以控制物理模拟对其的作用方式。
+
+即使向刚体施加力，刚体也始终保持其形状和尺寸。 
+它对于可以在环境中交互的对象非常有用，例如可以被推倒的树或可以推来推去的一堆板条箱。
+
+如果您需要覆盖默认的物理行为，您可以编写自定义力积分函数。 
+请参阅custom_integrator。
+
+注意：经常更改 RigidBody2D 的 2D 变换或 Linear_velocity 可能会导致一些不可预测的行为。 
+如果您需要直接影响身体，请首选 _integrate_forces()，因为它允许您直接访问物理状态。
 ```
