0715制作游戏的原则，场景要独立，下级场景不能影响上级，受上级控制

--- a/Godot实用代码模块/常用代码.md
+++ b/Godot实用代码模块/常用代码.md
@@ -3,6 +3,16 @@
 ```
 screen_size = get_viewport_rect().size
 ```
+使游戏屏幕一直在最上方
+```
+在游戏设置的高级设置中设定 windwo/size/always_on_top=true
+```
+场景切换函数方法
+```
+get_tree().change_scene_to_file()
+实现自动挂载场景，自动结束场景
+替代了之前的add_child(Game)和Game.queue_free()
+```
 链接外部文件，使能够使用
 ```
 const Common = preload("res://script/Common.gd")
@@ -23,3 +33,11 @@ set_gravity_scale(Common.birdGravityScale())
 float randf_range(from: float, to: float)
 
 返回 from 和 to（包含）之间的随机浮点值。
+
+封装方法
+```
+跟python类似，先设置好一个文件夹，封装常用方法。然后在需要使用的脚本抬头引用
+const RandomUtils = preload("res://zfoo/RandomUtils.gd")
+```
+AnimatedSprited2d，操作静态体的动画时，如果使用渲染帧_proces有可能会出现动画卡顿不自然的情况
+所以对静态体进行操作的时候尽量放在物理帧_physics_proces中操作
