--- a/Godot实用代码模块/常用模块说明.md
+++ b/Godot实用代码模块/常用模块说明.md
@@ -84,3 +84,17 @@ RigidBody2D 实现完整的 2D 物理。
 注意：经常更改 RigidBody2D 的 2D 变换或 Linear_velocity 可能会导致一些不可预测的行为。 
 如果您需要直接影响身体，请首选 _integrate_forces()，因为它允许您直接访问物理状态。
 ```
+
+## ParallaxBackground 视差背景
+```
+继承：CanvasLayer < Node < Object
+
+用于创建视差滚动背景的节点。
+ParallaxBackground 使用一个或多个 ParallaxLayer 子节点来创建视差效果。
+每个 ParallaxLayer 可以使用 ParallaxLayer.motion_offset 以不同的速度移动。
+这在 2D 游戏中可以创造一种深度错觉。
+如果没有与 Camera2D 一起使用，你必须手动计算 scroll_offset。
+
+注意：每个 ParallaxBackground 都是在各自的 Viewport 中绘制的，无法在不同 Viewport 之间共享，见 CanvasLayer.custom_viewport。
+在分屏游戏等使用多个 Viewport 的场景下，你需要每个需要绘制的 Viewport 创建单独的 ParallaxBackground。
+```
